crates/language-v2/tests/src/fail/p5_unused_versions/unused_version/test.stderr
error: Item 'Baz' is not used in versions: 1.0.0..2.0.0
  --> src/fail/p5_unused_versions/unused_version/test.rs:19:34
   |
19 |                     Token(name = Baz, scanner = Atom("baz"))
   |                                  ^^^
